@@ -2,8 +2,6 @@ Postfreeze things:
   - handle kills of server not working correctly to be more robust
     we must leave killing to the main daemon since that can more likely kill
     the server.
-  - DisplayInit in setup_automatic_session should probably be run
-    before the user setup, probably does no harm but anyway.
   - in the slave child handler check that restart greeter is done with euid
     and all that set correctly
   - in slave child handler check that the server dead stuff can actually wipe
